Bug 1139337 - Make the panel shortcuts visible on hover with High Contrast themes. r=Gijs

--- a/browser/themes/windows/customizableui/panelUIOverlay.css
+++ b/browser/themes/windows/customizableui/panelUIOverlay.css
@@ -237,6 +237,8 @@ menu.subviewbutton > .menu-right:-moz-locale-dir(rtl) {
   menuitem.panel-subview-footer@menuStateHover@,
   .subviewbutton.panel-subview-footer@buttonStateHover@,
   .subviewbutton.panel-subview-footer@buttonStateActive@,
+  .subviewbutton@menuStateHover@ > .menu-accel-container,
+  .PanelUI-subView .subviewbutton[shortcut]@buttonStateHover@::after,
   #BMB_bookmarksPopup .panel-subview-footer@menuStateHover@ > .menu-text {
     background-color: Highlight;
     color: highlighttext !important;
